--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@types/react-navigation": "^3.4.0",
+    "dayjs": "^1.11.7",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-hook-form": "^7.43.8",
+    "react-native": "0.71.4",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-uuid": "^2.0.1",
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
